fix bug with overflowing images
however, the ImageCard component now only works on the Home page, not on the Likes page.
Probably ImageCard will have to be split into two versions.

--- a/src/components/ImageCard/ImageCard.module.css
+++ b/src/components/ImageCard/ImageCard.module.css
@@ -1,21 +1,18 @@
 .container {
-  max-width: 100%;
-  max-height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  background-color: var(--bg-color-darker);
-  padding: 1rem;
+  position: absolute;
 }
 
 .image {
-  width: 100%;
-  height: 100%;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .imageFooter {
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  background-color: var(--bg-color-darker);
+  padding: 1rem;
+  background-color: var(--bg-color-darker-semi-transparent);
   display: flex;
   justify-content: space-between;
 }
